login improved by nakul

--- a/major/src/components/css/login.css
+++ b/major/src/components/css/login.css
@@ -11,7 +11,8 @@ body {
 }
 .container {
     position: relative;
-    margin-top: 20vh;
+    margin-top: 13vh;
+    margin-bottom: 5vh;
     /* width: 50%; */
     /* transform: translate(-50%, -50%); */
     /* top: 50%; */
@@ -21,7 +22,7 @@ form {
     margin-left: 25%;
     background: rgba(185, 213, 255, 0.329);
     padding: 3em;
-    height: 320px;
+    height: 370px;
     border-radius: 20px;
     border-left: 1px solid rgba(255, 255, 255, 0.3);
     border-top: 1px solid rgba(255, 255, 255, 0.3);
@@ -54,8 +55,8 @@ form a:active {
 }
 form input {
     /* background: transparent; */
-    background-color: azure;
-    width: 200px;
+    background-color: rgb(255, 255, 255);
+    width: 300px;
     padding: 1em;
     margin-bottom: 2em;
     border: none;
@@ -68,11 +69,11 @@ form input {
     font-family: Montserrat, sans-serif;
     font-weight: 500;
     transition: all 0.2s ease-in-out;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); */
 }
 form input:hover {
     background: rgb(255, 255, 255);
-    box-shadow: 4px 4px 60px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 3px 3px 30px 5px rgba(0, 0, 0, 0.2);
 }
 form input[type="email"]:focus, form input[type="password"]:focus {
     background: rgb(255, 255, 255);
@@ -80,8 +81,12 @@ form input[type="email"]:focus, form input[type="password"]:focus {
 }
 form input[type="button"] {
     margin-top: 10px;
-    width: 150px;
-    font-size: 1rem;
+    width: 170px;
+    font-size: 15px;
+    font-weight: 700;
+    background-color: rgb(119, 167, 255);
+    color: white;
+    
 }
 form input[type="button"]:hover {
     cursor: pointer;
