--- a/major/src/components/css/login.css
+++ b/major/src/components/css/login.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
 }
+
 .container {
     position: relative;
     margin-top: 20vh;
@@ -100,8 +101,8 @@ form:hover {
     /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); */
 }
 .drop {
-    background: rgba(255, 255, 255, 0.3);
-    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.185); 
+    backdrop-filter: blur(4px);
     border-radius: 10px;
     border-left: 1px solid rgba(255, 255, 255, 0.3);
     border-top: 1px solid rgba(255, 255, 255, 0.3);
@@ -110,37 +111,43 @@ form:hover {
     transition: all 0.2s ease;
 }
 .drop-1 {
-    height: 80px;
-    width: 80px;
-    top: -20px;
-    left: -40px;
-    z-index: -1;
-}
-.drop-2 {
-    height: 80px;
-    width: 80px;
-    bottom: -30px;
-    right: -10px;
-}
-.drop-3 {
-    height: 100px;
-    width: 100px;
-    bottom: 120px;
-    right: -50px;
-    z-index: -1;
-}
-.drop-4 {
     height: 120px;
     width: 120px;
-    top: -60px;
-    right: -60px;
+    top: -20px;
+    left: -40px;
+    z-index: 10;
+    background-image: url("../images/loginpage/brain.png");
+  background-size: contain; 
+  background-repeat: no-repeat;
+}
+.drop-3 {
+    height: 70px;
+    width: 70px;
+    bottom: 190px;
+    right: 80px;
+    z-index: 10;
+    background-image: url("../images/loginpage/loginimg1.png");
+  background-size: contain; 
+  background-repeat: no-repeat;
+}
+.drop-4 {
+    height: 100px;
+    width: 100px;
+    top: -10px;
+    right: -30px;
+    background-image: url("../images/loginpage/servers.png");
+  background-size: contain; 
+  background-repeat: no-repeat;
 }
 .drop-5 {
-    height: 60px;
-    width: 60px;
-    bottom: 170px;
-    left: 90px;
-    z-index: -1;
+    height: 80px;
+    width: 80px;
+    bottom: 150px;
+    left: 100px;
+    z-index: 1;
+    background-image: url("../images/loginpage/ssh.png");
+  background-size: contain; 
+  background-repeat: no-repeat;
 }
 a, input:focus, select:focus, textarea:focus, button:focus {
     outline: none;
