--- a/major/src/components/css/herohome.css
+++ b/major/src/components/css/herohome.css
@@ -81,6 +81,7 @@
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
+  border: none;
   /* user-select: none; */
   /* border: 1px solid transparent; */
   padding: 15px 15px;
