--- a/major/src/components/css/login.css
+++ b/major/src/components/css/login.css
@@ -1,8 +1,5 @@
 body {
-    /* background: linear-gradient(45deg, #1a1a69, #46a9eb); */
-    background-image: url("../images/bgbg.png");
-    /* background-size: 400px 500px; */
-    /* height: 100vh; */
+  background-image: url("../images/bgbg.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover; 
@@ -10,7 +7,7 @@ body {
     overflow-x: hidden;
 }
 
-.container {
+/* .container {
     position: relative;
     margin-top: 11vh;
     margin-bottom: 15vh;
@@ -51,7 +48,7 @@ form a:active {
     text-shadow: none;
 }
 form input {
-    /* background: transparent; */
+    
     background-color: rgb(255, 255, 255);
     width: 300px;
     padding: 1em;
@@ -66,7 +63,6 @@ form input {
     font-family: Montserrat, sans-serif;
     font-weight: 500;
     transition: all 0.2s ease-in-out;
-    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); */
 }
 form input:hover {
     background: rgb(255, 255, 255);
@@ -91,15 +87,12 @@ form input[type="button"]:hover {
 form input[type="button"]:active {
     background: rgb(255, 255, 255);
 }
-form:hover {
-    /* margin: 4px; */
-}
+
 ::placeholder {
     font-family: Montserrat, sans-serif;
     font-weight: 400;
     font-size: medium;
     color: #0a66c2;
-    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); */
 }
 .drop {
     background: rgba(255, 255, 255, 0.185); 
@@ -148,4 +141,4 @@ form:hover {
 }
 a, input:focus, select:focus, textarea:focus, button:focus {
     outline: none;
-}
+} */
